dark mode icon issue fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 @import "tailwindcss";
-@plugin "daisyui"
+@plugin "daisyui";
 
-
-a.active{
+a.active {
   border-bottom: 3px solid blue;
   padding-bottom: 5px;
-  
 }
+
 
 
 
